samples/_failures_safe/1761177640_8c92b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56ef412d.c: In function ‘main’:
./samples/SAFE/__tmp_56ef412d.c:156:20: error: missing terminating " character
  156 |             printf("Enter dimensions for matrix A:\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_56ef412d.c:156:13: error: expected expression at end of input
  156 |             printf("Enter dimensions for matrix A:\n
      |             ^~~~~~
./samples/SAFE/__tmp_56ef412d.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_56ef412d.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_56ef412d.c:156:13: error: expected declaration or statement at end of input
